--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>
-Healer Mobile App Ui KIT 
+Mugen Mobile App Ui KIT 
 </title>
 <style>
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
@@ -17,7 +17,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 
 body {
   line-height: 1;
-	background: #f8f8f8;}
+	background: #2c545c;}
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block; }
@@ -43,13 +43,11 @@ a {
   vertical-align: baseline;
   background: transparent; }
 
-/* change colours to suit your needs */
 ins {
   background-color: #ff9;
   color: #000;
   text-decoration: none; }
 
-/* change colours to suit your needs */
 mark {
   background-color: #ff9;
   color: #000;
@@ -78,9 +76,11 @@ hr {
 
 input, select {
   vertical-align: middle; }
+
 	#image img{
 		width: 100%;
 		margin: auto;
+		float: left;
 	}
 	#buy{
 		margin: auto;
@@ -107,7 +107,7 @@ input, select {
 	<img src="img/full_10.jpg">
 </div>
 <div id="buy">
-	<a href="https://ui8.net/products/healer"><img src="img/btn-buy.png"></a>
+	<a href="https://ui8.net/products/mugen-mobile-app-ui-kit"><img src="img/btn-buy.png"></a>
 </div>
 </body>
 </html>
