--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@ input, select {
 
 <body>
 <div id="image">
-	<img src="img/full_01.jpg">
-	<img src="img/full_02.jpg">
-	<img src="img/full_03.jpg">
-	<img src="img/full_04.jpg">
-	<img src="img/full_05.jpg">
-	<img src="img/full_06.jpg">
-	<img src="img/full_07.jpg">
-	<img src="img/full_08.jpg">
-	<img src="img/full_09.jpg">
-	<img src="img/full_10.jpg">
+	<img src="img/full_01.jpg" alt="full image 01">
+	<img src="img/full_02.jpg" alt="full image 02">
+	<img src="img/full_03.jpg" alt="full image 03">
+	<img src="img/full_04.jpg" alt="full image 04">
+	<img src="img/full_05.jpg" alt="full image 05">
+	<img src="img/full_06.jpg" alt="full image 06">
+	<img src="img/full_07.jpg" alt="full image 07">
+	<img src="img/full_08.jpg" alt="full image 08">
+	<img src="img/full_09.jpg" alt="full image 09">
+	<img src="img/full_10.jpg" alt="full image 10">
 </div>
 <div id="buy">
-	<a href="https://ui8.net/products/mugen-mobile-app-ui-kit"><img src="img/btn-buy.png"></a>
+	<a href="https://goo.gl/7NYuGv"><img src="img/btn-buy.png" alt="button psd"></a>
 </div>
 </body>
 </html>
