--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ input, select {
 	<img src="img/full_10.jpg" alt="full image 10">
 </div>
 <div id="buy">
-	<a href="https://goo.gl/7NYuGv"><img src="img/btn-buy.png" alt="button psd"></a>
+	<a href="https://goo.gl/YMWnDr"><img src="img/btn-buy.png" alt="button psd"></a>
 </div>
 </body>
 </html>
