--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@ input, select {
 	}
 	#buy a{
 		display: inline-block;
+		padding: 0px 20px 40px;
+		cursor: pointer;
 	}
 </style>
 </head>
@@ -108,6 +110,7 @@ input, select {
 </div>
 <div id="buy">
 	<a href="https://goo.gl/YMWnDr"><img src="img/btn-buy.png" alt="button psd"></a>
+	<a href="https://goo.gl/jM39rm"><img src="img/btn-buy-sketch.png" alt="button sketch"></a>
 </div>
 </body>
 </html>
